--- a/Titanic Survaival with Decision Tree/Titanic survival predection..ipynb
+++ b/Titanic Survaival with Decision Tree/Titanic survival predection..ipynb
@@ -68,7 +68,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's take a look on header and first five column of the training and test data."
+    "Let's take a look on header and first five column of the training and test data.\n",
+    "$x=\\frac{1}{7}$"
    ]
   },
   {
@@ -3551,9 +3552,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -8462,7 +8461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
