--- a/Iris Project/Iris Project.ipynb
+++ b/Iris Project/Iris Project.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "4  5.4  3.9  1.7  0.4  Iris-setosa"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "4  5.0  3.6  1.4  0.2  Iris-setosa"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "4           5.0          3.6           1.4          0.2  Iris-setosa"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
        "array(['Iris-setosa', 'Iris-versicolor', 'Iris-virginica'], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -980,16 +980,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1b6a6187400>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x25f4224f7f0>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1031,20 +1031,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A5F44DF0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A647F4C0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A625C910>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A6288C40>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x0000025F437485E0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F43538820>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x0000025F43558C10>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F43584F70>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1067,32 +1067,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A56EC7C0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A57094F0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A598BF40>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A33038E0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A568A130>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A5721460>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A5721550>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A563BEE0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A3C55250>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A3FE68E0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A3E34AF0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A3F63F40>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A3E693D0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A40217F0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A3EB0A00>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001B6A3FBF1F0>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x0000025F42157B50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F43B6A1C0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F43BBA640>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F43D62DC0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x0000025F43D97580>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F43DC0C40>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F43DC0D30>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F41809F10>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x0000025F42190700>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F4212C5B0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F42157D00>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F42145E20>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x0000025F404A5640>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F40464E80>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F419F6A30>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000025F41A20AF0>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1115,16 +1115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1b6a3cf6460>"
+       "<seaborn.axisgrid.PairGrid at 0x25f3e5bb640>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1146,6 +1146,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=df.drop(['sepal length', 'petal length','petal width' ], axis = 1) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1155,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1204,62 +1213,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>sepal length</th>\n",
        "      <th>sepal width</th>\n",
-       "      <th>petal length</th>\n",
-       "      <th>petal width</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
        "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
        "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4.6</td>\n",
        "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
        "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   sepal length  sepal width  petal length  petal width\n",
-       "0           5.1          3.5           1.4          0.2\n",
-       "1           4.9          3.0           1.4          0.2\n",
-       "2           4.7          3.2           1.3          0.2\n",
-       "3           4.6          3.1           1.5          0.2\n",
-       "4           5.0          3.6           1.4          0.2"
+       "   sepal width\n",
+       "0          3.5\n",
+       "1          3.0\n",
+       "2          3.2\n",
+       "3          3.1\n",
+       "4          3.6"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1275,7 @@
        "Name: class, dtype: object"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1304,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,22 +1318,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['Iris-versicolor' 'Iris-setosa' 'Iris-versicolor' 'Iris-versicolor'\n",
+      " 'Iris-versicolor' 'Iris-setosa' 'Iris-versicolor' 'Iris-virginica'\n",
+      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-setosa' 'Iris-virginica'\n",
+      " 'Iris-setosa' 'Iris-virginica' 'Iris-setosa' 'Iris-setosa'\n",
+      " 'Iris-virginica' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
+      " 'Iris-setosa' 'Iris-virginica' 'Iris-setosa' 'Iris-versicolor'\n",
+      " 'Iris-setosa' 'Iris-virginica' 'Iris-versicolor' 'Iris-setosa'\n",
+      " 'Iris-virginica' 'Iris-virginica']\n",
+      "73     Iris-versicolor\n",
+      "18         Iris-setosa\n",
+      "118     Iris-virginica\n",
+      "78     Iris-versicolor\n",
+      "76     Iris-versicolor\n",
+      "31         Iris-setosa\n",
+      "64     Iris-versicolor\n",
+      "141     Iris-virginica\n",
+      "68     Iris-versicolor\n",
+      "82     Iris-versicolor\n",
+      "110     Iris-virginica\n",
+      "12         Iris-setosa\n",
+      "36         Iris-setosa\n",
+      "9          Iris-setosa\n",
+      "19         Iris-setosa\n",
+      "56     Iris-versicolor\n",
+      "104     Iris-virginica\n",
+      "69     Iris-versicolor\n",
+      "55     Iris-versicolor\n",
+      "132     Iris-virginica\n",
+      "29         Iris-setosa\n",
+      "127     Iris-virginica\n",
+      "26         Iris-setosa\n",
+      "128     Iris-virginica\n",
+      "131     Iris-virginica\n",
+      "145     Iris-virginica\n",
+      "108     Iris-virginica\n",
+      "143     Iris-virginica\n",
+      "45         Iris-setosa\n",
+      "30         Iris-setosa\n",
+      "Name: class, dtype: object\n",
       "                 precision    recall  f1-score   support\n",
       "\n",
-      "    Iris-setosa       1.00      1.00      1.00        10\n",
-      "Iris-versicolor       1.00      1.00      1.00         9\n",
-      " Iris-virginica       1.00      1.00      1.00        11\n",
+      "    Iris-setosa       0.60      0.60      0.60        10\n",
+      "Iris-versicolor       0.67      0.89      0.76         9\n",
+      " Iris-virginica       0.50      0.36      0.42        11\n",
       "\n",
-      "       accuracy                           1.00        30\n",
-      "      macro avg       1.00      1.00      1.00        30\n",
-      "   weighted avg       1.00      1.00      1.00        30\n",
+      "       accuracy                           0.60        30\n",
+      "      macro avg       0.59      0.62      0.59        30\n",
+      "   weighted avg       0.58      0.60      0.58        30\n",
       "\n"
      ]
     }
@@ -1352,8 +1382,8 @@
     "predections = model.predict(x_test)\n",
     "\n",
     "# check the predection manually with the real data.\n",
-    "#print(predections)\n",
-    "#print(y_test)\n",
+    "print(predections)\n",
+    "print(y_test)\n",
     "\n",
     "print(classification_report(y_test,predections))"
    ]
