--- a/Titanic Survaival with Decision Tree/Titanic survival predection..ipynb
+++ b/Titanic Survaival with Decision Tree/Titanic survival predection..ipynb
@@ -1997,10 +1997,10 @@
     }
    ],
    "source": [
-    "df['Title'].replace(['Mme','Ms','Lady'],'Mrs', inplace=True)\n",
-    "df['Title'].replace('Mlle', 'Miss', inplace=True)\n",
+    "df['Title'].replace(['Mme','Ms','Lady','Dona'],'Mrs', inplace=True)\n",
+    "df['Title'].replace('Jonkheer','Mlle', 'Miss', inplace=True)\n",
     "df['Title'].replace(['Sir','Don'], 'Mr', inplace=True)\n",
-    "df['Title'].replace(['Dr','Rev','Col','Major','Dona','Jonkheer','Capt','the Countess'],'Others',inplace=True)\n",
+    "df['Title'].replace(['Dr','Rev','Col','Major','Capt','the Countess'],'Others',inplace=True)\n",
     "df['Title'].value_counts()"
    ]
   },
