--- a/Otto-group-product-classification-challenge/Otto_Group_Product_Classification .ipynb
+++ b/Otto-group-product-classification-challenge/Otto_Group_Product_Classification .ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "[5 rows x 95 columns]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "[5 rows x 94 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "Name: target, dtype: object"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "Length: 95, dtype: int64"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "Index([], dtype='object')"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "       'Class_7', 'Class_8', 'Class_9'], dtype=object)"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,16 +640,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x27207d37700>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1dcb78d80d0>"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8])"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>feat_1</th>\n",
        "      <th>feat_2</th>\n",
        "      <th>feat_4</th>\n",
@@ -793,6 +792,7 @@
        "      <th>feat_10</th>\n",
        "      <th>feat_11</th>\n",
        "      <th>feat_12</th>\n",
+       "      <th>feat_13</th>\n",
        "      <th>...</th>\n",
        "      <th>feat_85</th>\n",
        "      <th>feat_86</th>\n",
@@ -810,7 +810,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -818,6 +817,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
@@ -833,7 +833,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -857,7 +857,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -881,7 +881,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -891,6 +890,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -905,7 +905,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -953,7 +953,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61873</th>\n",
-       "      <td>61874</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -963,6 +962,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -977,7 +977,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61874</th>\n",
-       "      <td>61875</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -987,6 +986,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
@@ -1001,7 +1001,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61875</th>\n",
-       "      <td>61876</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1025,8 +1025,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61876</th>\n",
-       "      <td>61877</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1049,7 +1049,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61877</th>\n",
-       "      <td>61878</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1059,6 +1058,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1073,35 +1073,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>61878 rows × 88 columns</p>\n",
+       "<p>61878 rows × 87 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          id  feat_1  feat_2  feat_4  feat_5  feat_6  feat_7  feat_10  \\\n",
-       "0          1       1       0       0       0       0       0        0   \n",
-       "1          2       0       0       0       0       0       0        0   \n",
-       "2          3       0       0       0       0       0       0        0   \n",
-       "3          4       1       0       1       6       1       5        1   \n",
-       "4          5       0       0       0       0       0       0        0   \n",
-       "...      ...     ...     ...     ...     ...     ...     ...      ...   \n",
-       "61873  61874       1       0       1       1       0       0        0   \n",
-       "61874  61875       4       0       0       0       0       0        0   \n",
-       "61875  61876       0       0       0       0       0       0        0   \n",
-       "61876  61877       1       0       0       0       0       0        0   \n",
-       "61877  61878       0       0       0       0       0       0        0   \n",
+       "       feat_1  feat_2  feat_4  feat_5  feat_6  feat_7  feat_10  feat_11  \\\n",
+       "0           1       0       0       0       0       0        0        1   \n",
+       "1           0       0       0       0       0       0        0        0   \n",
+       "2           0       0       0       0       0       0        0        0   \n",
+       "3           1       0       1       6       1       5        1        1   \n",
+       "4           0       0       0       0       0       0        0        0   \n",
+       "...       ...     ...     ...     ...     ...     ...      ...      ...   \n",
+       "61873       1       0       1       1       0       0        0        0   \n",
+       "61874       4       0       0       0       0       0        0        0   \n",
+       "61875       0       0       0       0       0       0        0        0   \n",
+       "61876       1       0       0       0       0       0        0        0   \n",
+       "61877       0       0       0       0       0       0        0        0   \n",
        "\n",
-       "       feat_11  feat_12  ...  feat_85  feat_86  feat_87  feat_88  feat_89  \\\n",
-       "0            1        0  ...        1        0        0        0        0   \n",
+       "       feat_12  feat_13  ...  feat_85  feat_86  feat_87  feat_88  feat_89  \\\n",
+       "0            0        0  ...        1        0        0        0        0   \n",
        "1            0        0  ...        0        0        0        0        0   \n",
        "2            0        0  ...        0        0        0        0        0   \n",
-       "3            1        0  ...        0        1        2        0        0   \n",
+       "3            0        1  ...        0        1        2        0        0   \n",
        "4            0        0  ...        1        0        0        0        0   \n",
        "...        ...      ...  ...      ...      ...      ...      ...      ...   \n",
-       "61873        0        1  ...        1        0        0        0        0   \n",
-       "61874        0        0  ...        0        2        0        0        2   \n",
+       "61873        1        3  ...        1        0        0        0        0   \n",
+       "61874        0        4  ...        0        2        0        0        2   \n",
        "61875        0        0  ...        0        3        1        0        0   \n",
        "61876        0        0  ...        0        0        0        0        1   \n",
-       "61877        0        0  ...        0        0        0        0        0   \n",
+       "61877        0        3  ...        0        0        0        0        0   \n",
        "\n",
        "       feat_90  feat_91  feat_92  feat_93  target  \n",
        "0            0        0        0        0       0  \n",
@@ -1116,16 +1116,16 @@
        "61876        0        3       10        0       8  \n",
        "61877        0        0        2        0       8  \n",
        "\n",
-       "[61878 rows x 88 columns]"
+       "[61878 rows x 87 columns]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "traindf.drop(['feat_45','feat_3','feat_72','feat_84','feat_9','feat_77','feat_8' ], axis = 1) "
+    "traindf.drop(['id','feat_45','feat_3','feat_72','feat_84','feat_9','feat_77','feat_8' ], axis = 1) "
    ]
   },
   {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1177,7 @@
        "              tree_method='exact', validate_parameters=1, verbosity=None)"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,16 +1190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x272080f8700>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1dcb8078700>"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
