unsupervised learning PCA and K-mean

--- a/Boston House Price Prediction/Boston Housing Feature Importance .ipynb
+++ b/Boston House Price Prediction/Boston Housing Feature Importance .ipynb
@@ -722,6 +722,161 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Label Encoder and One Hot/One of K End"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Encoding Catagorical Feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 0, 1, 2], dtype=int64)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "\n",
+    "src = [ \"North America\", \"Asia\",\"Australia\", \"Europe\"]\n",
+    "labelEnc =  preprocessing.LabelEncoder();\n",
+    "srcEnc = labelEnc.fit_transform(src);\n",
+    "srcEnc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data = labelEnc.fit_transform([\"Australia\", \"Europe\", \"North America\", \"Asia\"])\n",
+    "test_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### One Hot/One of K Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3],\n",
+       "       [0],\n",
+       "       [1],\n",
+       "       [2]], dtype=int64)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_hot_enc = preprocessing.OneHotEncoder(sparse=False, categories = 'auto')\n",
+    "srcEnc = srcEnc.reshape(len(srcEnc), 1)\n",
+    "srcEnc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "srcOneHot = one_hot_enc.fit_transform(srcEnc)\n",
+    "srcOneHot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reversing One Hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]]\n",
+      "[0. 1. 0. 0.]\n",
+      "1\n",
+      "['Australia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "print(srcOneHot)\n",
+    "srcOneHot_1 = srcOneHot[2,:] #you can change the value here to 0,1,2,3 to see the decode value\n",
+    "print(srcOneHot_1)\n",
+    "argmax = np.argmax(srcOneHot_1)\n",
+    "print(argmax)\n",
+    "inverse = labelEnc.inverse_transform([argmax])\n",
+    "print(inverse)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
